Update install_minecraft_server.sh
Java optimisation