@@ -132,13 +132,15 @@ check_server
 check_update
 revert_backup
 
-/usr/bin/java -d64 -Xmx8192M -Xms2048M -jar /opt/minecraft/server/server.jar nogui
+/usr/bin/java -server -d64 -XX:+UseConcMarkSweepGC -XX:+UseParNewGC -XX:+CMSIncrementalPacing -XX:ParallelGCThreads=2 -XX:+AggressiveOpts -XX:PermSize: -XX:MaxPermSize: -XX:InitiatingHeapOccupancyPercent=35 -XX:G1ReservePercent=15 -XX:+UseFastAccessorMethods -XX:+UseCompressedOops -XX:+UseG1GC -XX:+AlwaysPreTouch -XX:+UnlockExperimentalVMOptions -XX:MaxGCPauseMillis=100 -XX:+DisableExplicitGC -XX:TargetSurvivorRatio=90 -XX:G1NewSizePercent=50 -XX:G1MaxNewSizePercent=80 -XX:InitiatingHeapOccupancyPercent=10 -XX:G1MixedGCLiveThresholdPercent=50 -XX:+AggressiveOpts -Xmx8192M -Xms256M -jar /opt/minecraft/server/server.jar nogui
 EOS
 	
 	if [ "$1" != "" ]
 	then
 		sed -i "s|#level-seed=|level-seed=$3|g" /opt/minecraft/tools/start.sh
 	fi
+	let "maxmemory = $(free -m | grep Mem | awk '{print $2}') - 1024"
+	sed -i "s|-Xmx8192M|-Xmx$(echo $maxmemory)M|g" /opt/minecraft/tools/start.sh
 }
 
 function create_backup_tool()
